--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Folio Bootstrap Template - Index</title>
+  <title>Razib Protfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -364,7 +364,7 @@
             </div>
 
             <div class="col-lg-6">
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <form action="https://formsubmit.co/mhrazib95@gmail.com" method="POST" role="form" class="php-email-form">
                 <div class="row gy-3">
 
                   <div class="col-lg-6">
