--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo">RAZIB</a>
       <!-- Uncomment below if you prefer to use an text logo -->
       <!-- <h1 class="logo"><a href="index.html">Folio</a></h1> -->
 
@@ -364,7 +364,7 @@
             </div>
 
             <div class="col-lg-6">
-              <form action="https://formsubmit.co/mhrazib95@gmail.com" method="POST" role="form" class="php-email-form">
+              <form action="https://formsubmit.co/mhrazib95@gmail.com" method="post" role="form" class="php-email-form">
                 <div class="row gy-3">
 
                   <div class="col-lg-6">
