--- a/index.html
+++ b/index.html
@@ -210,37 +210,37 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Dark less motor'.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Dark less motor'-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Dark Less Motor's</h4>
               <p>App</p>
               <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="Dark-Less-Motor.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/Modern Ambulance.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Modern Ambulance-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Modern Ambulance</h4>
               <p>Web</p>
               <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="Modern-Ambulance.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/World Tour Agenc.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/World Tour Agenc-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>World Agency</h4>
+              <h4>World Tour Agency</h4>
               <p>App</p>
               <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="World-Agency.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Honda CBR.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Honda CBR-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Honda CBR</h4>
               <p>Card</p>
@@ -250,7 +250,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/Healthy Bites.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Healthy Bites-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Healthy Bites</h4>
               <p>Web</p>
@@ -260,7 +260,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Copa America.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Copa America-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Copa America</h4>
               <p>App</p>
@@ -276,7 +276,7 @@
     </div><!-- End Portfolio Section -->
 
     <!-- ======= Journal Section ======= -->
-    <div id="journal" class="text-left paddsection">
+    <!-- <div id="journal" class="text-left paddsection">
 
       <div class="container">
         <div class="section-title text-center">
@@ -340,7 +340,8 @@
         </div>
       </div>
 
-    </div><!-- End Journal Section -->
+    </div> -->
+    <!-- End Journal Section -->
 
     <!-- ======= Contact Section ======= -->
     <div id="contact" class="paddsection">
@@ -354,10 +355,10 @@
                 <h2 class="mb-30">GET IN TOUCH</h2>
 
                 <ul class="contact-details">
-                  <li><span>23 Main, Street</span></li>
-                  <li><span>New York, United States</span></li>
-                  <li><span>+88 01912704287</span></li>
-                  <li><span>example@example.com</span></li>
+                  <li><span>Chinishpur, Narsingdi Shadar</span></li>
+                  <li><span> Narsingdi, Dhaka, Bangladesh</span></li>
+                  <li><span>+88 01952747252</span></li>
+                  <li><span>mhrazib121@gmail.com</span></li>
                 </ul>
 
               </div>
