--- a/Dark-Less-Motor.html
+++ b/Dark-Less-Motor.html
@@ -40,7 +40,7 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo">RAZIB</a>
       <!-- Uncomment below if you prefer to use an text logo -->
       <!-- <h1 class="logo"><a href="index.html">Folio</a></h1> -->
 
@@ -127,9 +127,9 @@
                 <li><strong>Category</strong>: Web Design and Development</li>
                 <li><strong>Client</strong>: Dark Less Motor</li>
                 <li><strong>Project date</strong>: September, 2021</li>
-                <li><button class=""><a href="https://dark-less-motor-s.web.app/"> Live Preview</a></button></li>
-                <li><button class=""><a href="https://github.com/mhrazib121/dark-less-motor-s"> Client Side </a></button></li>
-                <li><button class=""><a href="https://github.com/mhrazib121/dark-less-motor-s-server"> Server Side</a></button></li>
+                <li><button class=""><a href="https://dark-less-motor-s.web.app/" target="_blank"> Live Preview</a></button></li>
+                <li><button class=""><a href="https://github.com/mhrazib121/dark-less-motor-s" target="_blank"> Client Side </a></button></li>
+                <li><button class=""><a href="https://github.com/mhrazib121/dark-less-motor-s-server" target="_blank"> Server Side</a></button></li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
