--- a/Modern-Ambulance.html
+++ b/Modern-Ambulance.html
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo">RAZIB</a>
       <!-- Uncomment below if you prefer to use an text logo -->
       <!-- <h1 class="logo"><a href="index.html">Folio</a></h1> -->
 
@@ -129,9 +129,9 @@
                 <li><strong>Category</strong>: Web Development</li>
                 <li><strong>Client</strong>: Modern Ambulance</li>
                 <li><strong>Project date</strong>: September, 2021</li>
-                <li><button class=""><a href="https://modern-ambulance-786e49.netlify.app/"> Live Preview</a></button>
+                <li><button class=""><a href="https://modern-ambulance-786e49.netlify.app/" target="_blank"> Live Preview</a></button>
                 </li>
-                <li><button class=""><a href="https://github.com/mhrazib121/modern-ambulance-website"> Code Link
+                <li><button class=""><a href="https://github.com/mhrazib121/modern-ambulance-website" target="_blank"> Code Link
                     </a></button></li>
               </ul>
             </div>
