--- a/World-Agency.html
+++ b/World-Agency.html
@@ -42,7 +42,7 @@
     <header id="header" class="fixed-top header-inner-pages">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+            <a href="index.html" class="logo">RAZIB</a>
             <!-- Uncomment below if you prefer to use an text logo -->
             <!-- <h1 class="logo"><a href="index.html">Folio</a></h1> -->
 
@@ -130,11 +130,11 @@
                                 <li><strong>Category</strong>: Web Development </li>
                                 <li><strong>Client</strong>: Dark Less Motor's</li>
                                 <li><strong>Project date</strong>: November, 2021</li>
-                                <li><button class=""><a href="https://world-tour-agency-27064.web.app/"> Live
+                                <li><button class=""><a href="https://world-tour-agency-27064.web.app/" target="_blank"> Live
                                             Preview</a></button></li>
-                                <li><button class=""><a href="https://github.com/mhrazib121/tour-agency"> Client Side
+                                <li><button class=""><a href="https://github.com/mhrazib121/tour-agency" target="_blank"> Client Side
                                         </a></button></li>
-                                <li><button class=""><a href="https://github.com/mhrazib121/tour-agency-server"> Server
+                                <li><button class=""><a href="https://github.com/mhrazib121/tour-agency-server" target="_blank"> Server
                                             Side</a></button></li>
                             </ul>
                         </div>
