--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
             <div class="about-descr">
 
               <p class="p-heading">I'm a web developer based on MERN Stack who loves clean, simple & unique design. I enjoy developing for short & long trem work. </p>
-              <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is. The European languages are members of the same family.English person.</p>
+              <p class="separator">
+                Recently I completed a Full Web Development Course from a well-known institute (Programming Hero). My learning experience includes HTML, CSS, JavaScript, React, Node js, and MongoDB. I have been consistently praised as a good developer by my leader. As the position is a Web Developer role my keen attention to detail and designing knowledge will be an added advantage for me to serve you with a quality-oriented service.</p>
 
             </div>
 
@@ -214,7 +215,7 @@
             <div class="portfolio-info">
               <h4>Dark Less Motor's</h4>
               <p>App</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/Dark less motor'-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
               <a href="Dark-Less-Motor.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -224,7 +225,7 @@
             <div class="portfolio-info">
               <h4>Modern Ambulance</h4>
               <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/Modern Ambulance-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
               <a href="Modern-Ambulance.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -234,12 +235,12 @@
             <div class="portfolio-info">
               <h4>World Tour Agency</h4>
               <p>App</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/World Tour Agenc-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
               <a href="World-Agency.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/Honda CBR-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Honda CBR</h4>
@@ -267,7 +268,7 @@
               <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
