--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link  scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link  scrollto" href="#journal">Blog</a></li>
+          <li><a class="nav-link  scrollto" href="blog.html">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -216,7 +216,7 @@
               <h4>Dark Less Motor's</h4>
               <p>App</p>
               <a href="assets/img/portfolio/Dark less motor'-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="Dark-Less-Motor.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="Dark-Less-Motor.html" class="details-link" title="More Details"><button class="btn"> Details </button></a>
             </div>
           </div>
 
@@ -226,7 +226,8 @@
               <h4>Modern Ambulance</h4>
               <p>Web</p>
               <a href="assets/img/portfolio/Modern Ambulance-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="Modern-Ambulance.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="Modern-Ambulance.html" class="details-link" title="More Details"><button class="btn"> Details </button></a>
+              <!-- <a href="Modern-Ambulance.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
             </div>
           </div>
 
@@ -236,7 +237,7 @@
               <h4>World Tour Agency</h4>
               <p>App</p>
               <a href="assets/img/portfolio/World Tour Agenc-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="World-Agency.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="World-Agency.html" class="details-link" title="More Details"><button class="btn"> Details </button></a>
             </div>
           </div>
 
@@ -366,7 +367,7 @@
             </div>
 
             <div class="col-lg-6">
-              <form action="https://formsubmit.co/mhrazib95@gmail.com" method="post" role="form" class="php-email-form">
+              <form target="_blank" action="https://formsubmit.co/mhrazib95@gmail.com" method="POST" class="submit-email-form">
                 <div class="row gy-3">
 
                   <div class="col-lg-6">
@@ -392,12 +393,13 @@
                       <textarea class="form-control" name="message" placeholder="Message" required></textarea>
                     </div>
                   </div>
+                  <input type="hidden" name="_captcha" value="false">
 
-                  <div class="col-lg-12">
+                  <!-- <div class="col-lg-12">
                     <div class="loading">Loading</div>
                     <div class="error-message"></div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
-                  </div>
+                  </div> -->
 
                   <div class="mt-0">
                     <input type="submit" class="btn btn-defeault btn-send" value="Send message">
